Change Log for FISSFC: the (Fi)recloud (S)ervice (S)elector
=======================================================================
Terms used below:  HL = high level interface, LL = low level interface

v0.16.31 - Changed Dockerfile base image to python 3; HL: mop updated to
           find files in attributes with array and compound data structure
           values, attr_delete updated to work on pair attributes.

v0.16.30 - HL: hotfix - re-enabled making methods public.

v0.16.29 - LL: added fields parameter to get_workspace; HL: space_exists,
           attr_get, attr_copy, mop, validate_file_attrs, and config_validate
           updated to use fields parameter in call to get_workspace; py3 fixes:
           easy_install removed from setup.py to enable compatibility with
           latest setuptools, tempfile generated in fccore.edit_text now opens
           in mode 'w' instead of 'w+b' to work with both py2 and py3 str.

v0.16.28 - LL: added fields parameter to list_workspaces; HL: space_list and
           space_search updated to use fields parameter in call to
           list_workspaces, proj_list fixed to enable py3 compatibility. 

v0.16.27 - HL: added new function validate_file_attrs, which takes all
           file attributes in a given workspace and entities contained within
           and checks if they exist/the user has access to them; LL: Bugfix,
           default root_url of API can now be set via CLI or interactively;
           previously it could only be effectively modified via .fissconfig.

v0.16.26 - LL: added copyFilesWithPrefix parameter to clone_workspace,
           create_submission no longer includes entity name and type in its
           payload when they are not set; HL: added copyFilesWithPrefix 
           parameter to space_clone, config_start no longer requires entity to
           be set in order to enable running non-data model configs.

v0.16.25 - HL: multiple enhancements to mop; only delete unreferenced files