@@ -5,7 +5,8 @@ Terms used below:  HL = high level interface, LL = low level interface
 
 v0.16.31 - Changed Dockerfile base image to python 3; HL: mop updated to
            find files in attributes with array and compound data structure
-           values, attr_delete updated to work on pair attributes.
+           values, attr_delete updated to work on pair attributes, attr_get and
+           attr_list updated to return or elide reference data in workspace.
 
 v0.16.30 - HL: hotfix - re-enabled making methods public.
 
